--- a/index.html
+++ b/index.html
@@ -56,8 +56,48 @@
     </header>
     <section class="relative bg-lavale w-full z-10 h-fit overflow-hidden">
         <div class="w-full bg-lavale">
-            <div class="flex flex-col w-[88.89%] mx-auto">
-                
+            <div class="flex flex-col w-[88.89%] mx-auto items-center align-center justify-center px-[9%] py-[7%]">
+                <img src="./img/dragonfly.png" class="w-[15%] mb-4">
+                <h1 class="w-full text-center text-5xl text-white font-display mb-4">Tinh Hoa Lavale</h1>
+                <span class="block w-full text-base text-center text-advice font-monsterrat mb-12">Kết tinh của niềm tin và ước mơ</span>
+                <div class="grid grid-cols-3 gap-4 w-full">
+                    <div class="w-full">
+                        <div class="w-full aspect-[332/480] flex items-center justify-center align-center bg-ruouman rounded-md bg-no-repeat bg-center bg-cover">
+                            <img src="./img/ruouman.png" class="w-full">
+                        </div>
+                        <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium"> Lavale Mận </span>
+                        <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
+                        <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
+                    </div>
+                    <div class="w-full">
+                        <div class="w-full aspect-[332/480] flex items-center justify-center align-center bg-ruoutaomeo rounded-md bg-no-repeat bg-center bg-cover">
+                            <img src="./img/ruoutaomeo.png" class="w-full">
+                        </div>
+                        <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium"> Lavale Táo Mèo </span>
+                        <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ</span>
+                        <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
+                    </div>
+                    <div class="w-full">
+                        <div class="w-full aspect-[332/480] flex items-center justify-center align-center bg-ruouvai rounded-md bg-no-repeat bg-center bg-cover">
+                            <img src="./img/ruouvai.png" class="w-full">
+                        </div>
+                        <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium"> Lavale Vải </span>
+                        <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
+                        <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-full bg-lavale">
+            <div class="grid grid-cols-5 gap-0 flex flex-row w-[88.89%] mx-auto items-center align-center justify-center px-0 py-[7%]">
+                <img src="./img/post.jfif" class="col-span-3">
+                <div class="col-span-2 pl-10">
+                    <h1 class="text-left text-5xl text-white font-display mb-8">Đồng Hành Cùng Lavale</h1>
+                    <span class="block text-left text-base text-advice font-monsterrat">
+                        Cùng Lavale tham gia các sự kiện và hoạt động vui <br/> chơi giải trí trên toàn quốc, cùng nhau lan tỏa năng <br/> lượng tích cực
+                    </span>
+                    <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Các hoạt động của Lavale</button>
+                </div>
             </div>
         </div>
         <div class="w-full bg-lavalesemi">
@@ -135,7 +175,7 @@
                 </div>
             </div>
         </div>
-        <div class="grow flex flex-row w-[88.89%] mx-auto items-center align-center border-t-2 py-4">
+        <div class="grow flex flex-row w-[88.89%] mx-auto items-center align-center border-t-[1px] py-4">
             <span class="uppercase align-left font-monsterrat leading-8 text-white/60 text-base font-medium">© LAVALE 2024</span>
         </div>
     </footer>
