--- a/index.html
+++ b/index.html
@@ -56,9 +56,75 @@
     </header>
     <section class="relative bg-lavale w-full z-10 h-fit overflow-hidden">
         <div class="w-full bg-lavale">
+            <div class="flex flex-row w-[88.89%] mx-auto items-center align-center justify-center">
+                <div class="flex flex-row relative w-full aspect-[1280/576]">
+                    <div class="w-[3%] h-[100%] mx-auto flex flex-col items-center align-center justify-center">
+                        <svg width="6" height="212" viewBox="0 0 6 212" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path opacity="0.4" d="M3 3L3 209" stroke="#DDDDDD" stroke-opacity="0.866667" stroke-width="6" stroke-linecap="round"/>
+                        </svg>                            
+                        <svg class="my-4" width="32" height="48" viewBox="0 0 32 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M29.8827 20.3878L17.7112 2.43697L16.06 0L14.2623 2.66333L2.09081 20.6142L0 23.7037L2.09081 26.7932L14.1956 44.6375L15.9269 47.181L17.6712 44.6242L29.9094 26.5801L32 23.4906L29.8827 20.3878ZM14.1956 38.4852L4.16812 23.6904L14.2489 8.81567C14.2356 17.871 14.2223 28.1781 14.1956 38.4852ZM17.6579 38.4186C17.6979 26.0874 17.7112 16.3263 17.7112 8.6026L27.7919 23.4773L17.6579 38.4186Z" fill="#FFEBC0"/>
+                        </svg>  
+                        <!-- <svg width="6" height="212" viewBox="0 0 6 212" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path opacity="0.4" d="M3 3L3 209" stroke="#DDDDDD" stroke-opacity="0.866667" stroke-width="6" stroke-linecap="round"/>
+                        </svg>    -->
+                        <svg width="6" height="441" viewBox="0 0 6 441" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path opacity="0.4" d="M3 3.18091L3 437.181" stroke="#DDDDDD" stroke-opacity="0.866667" stroke-width="6" stroke-linecap="round"/>
+                        </svg>
+                    </div>
+                    <div class="flex flex-row absolute w-full bottom-0 left-0 aspect-[1280/480]">
+                        <div class="w-[45%] aspect-[576/480] flex flex-col items-center align-center justify-center">
+                            <img src="./img/timeline1.jfif" class="w-full rounded-md"/>
+                        </div>
+                        <div class="w-[10%] aspect-[128/480]">
+                        </div>
+                        <div class="w-[45%] aspect-[576/480] flex flex-col items-start align-start justify-center">
+                            <h1 class="w-full text-left text-5xl text-white font-display mb-4">Khởi Nguồn Từ Núi Rừng</h1>
+                            <span class="block text-left text-advice font-monsterrat text-base">
+                                Giấc mơ làm rượu từ trái cây vùng núi là khát vọng của nhiều người <br/> đam mê. Trái cây vùng núi không chỉ ngọt ngào và thơm ngon mà còn <br/> mang trong mình hương vị đặc trưng của thiên nhiên hoang dã. 
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-full bg-lavale">
+            <div class="flex flex-row w-[88.89%] mx-auto items-center align-center justify-center">
+                <div class="flex flex-row relative w-full aspect-[1280/576]">
+                    <div class="w-[3%] h-[100%] mx-auto flex flex-col items-center align-center justify-center">
+                        <svg width="6" height="212" viewBox="0 0 6 212" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path opacity="0.4" d="M3 3L3 209" stroke="#DDDDDD" stroke-opacity="0.866667" stroke-width="6" stroke-linecap="round"/>
+                        </svg>                            
+                        <svg class="my-4" width="32" height="48" viewBox="0 0 32 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M29.8827 20.3878L17.7112 2.43697L16.06 0L14.2623 2.66333L2.09081 20.6142L0 23.7037L2.09081 26.7932L14.1956 44.6375L15.9269 47.181L17.6712 44.6242L29.9094 26.5801L32 23.4906L29.8827 20.3878ZM14.1956 38.4852L4.16812 23.6904L14.2489 8.81567C14.2356 17.871 14.2223 28.1781 14.1956 38.4852ZM17.6579 38.4186C17.6979 26.0874 17.7112 16.3263 17.7112 8.6026L27.7919 23.4773L17.6579 38.4186Z" fill="#FFEBC0"/>
+                        </svg>  
+                        <!-- <svg width="6" height="212" viewBox="0 0 6 212" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path opacity="0.4" d="M3 3L3 209" stroke="#DDDDDD" stroke-opacity="0.866667" stroke-width="6" stroke-linecap="round"/>
+                        </svg>    -->
+                        <svg width="6" height="441" viewBox="0 0 6 441" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path opacity="0.4" d="M3 3.18091L3 437.181" stroke="#DDDDDD" stroke-opacity="0.866667" stroke-width="6" stroke-linecap="round"/>
+                        </svg>
+                    </div>
+                    <div class="flex flex-row absolute w-full bottom-0 left-0 aspect-[1280/480]">
+                        <div class="w-[45%] aspect-[576/480] flex flex-col items-center align-center justify-center">
+                            <img src="./img/timeline1.jfif" class="w-full rounded-md"/>
+                        </div>
+                        <div class="w-[10%] aspect-[128/480]">
+                        </div>
+                        <div class="w-[45%] aspect-[576/480] flex flex-col items-start align-start justify-center">
+                            <h1 class="w-full text-left text-5xl text-white font-display mb-4">Khởi Nguồn Từ Núi Rừng</h1>
+                            <span class="block text-left text-advice font-monsterrat text-base">
+                                Giấc mơ làm rượu từ trái cây vùng núi là khát vọng của nhiều người <br/> đam mê. Trái cây vùng núi không chỉ ngọt ngào và thơm ngon mà còn <br/> mang trong mình hương vị đặc trưng của thiên nhiên hoang dã. 
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-full bg-lavale">
             <div class="flex flex-col w-[88.89%] mx-auto items-center align-center justify-center px-[9%] py-[7%]">
                 <img src="./img/dragonfly.png" class="w-[15%] mb-4">
-                <h1 class="w-full text-center text-5xl text-white font-display mb-4">Tinh Hoa Lavale</h1>
+                <h1 class="w-full text-center text-5xl text-white font-display mb-4 mt-10">Tinh Hoa Lavale</h1>
                 <span class="block w-full text-base text-center text-advice font-monsterrat mb-12">Kết tinh của niềm tin và ước mơ</span>
                 <div class="grid grid-cols-3 gap-4 w-full">
                     <div class="w-full">
