--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <img src="./img/homepage.png" class="w-full" />
 
-        <div class="absolute left-0 bottom-0 aspect-[1440/72]">
+        <div class="absolute w-full left-0 bottom-0 aspect-[1440/72]">
             <img src="./img/spliter.png" class="w-full scale-x-[-1] rotate-180">
         </div>
     </header>
