--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@
                 <span class="block w-full text-base text-center text-advice font-monsterrat mb-12">Kết tinh của niềm tin và ước mơ</span>
                 <div class="grid grid-cols-3 gap-4 w-full">
                     <div class="w-full">
-                        <div class="w-full aspect-[332/480] flex items-center justify-center align-center bg-ruouman rounded-md bg-no-repeat bg-center bg-cover">
+                        <div class="relative w-full aspect-[333/480] flex items-center justify-center align-center bg-ruouman rounded-md bg-no-repeat bg-center bg-cover">
+                            <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                            <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                             <img src="./img/ruouman.png" class="w-full">
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Mận </span>
@@ -228,7 +232,11 @@
                         <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
                     </div>
                     <div class="w-full">
-                        <div class="w-full aspect-[332/480] flex items-center justify-center align-center bg-ruoutaomeo rounded-md bg-no-repeat bg-center bg-cover">
+                        <div class="relative w-full aspect-[333/480] flex items-center justify-center align-center bg-ruoutaomeo rounded-md bg-no-repeat bg-center bg-cover">
+                            <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                            <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                             <img src="./img/ruoutaomeo.png" class="w-full">
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Táo Mèo </span>
@@ -236,7 +244,11 @@
                         <button class="transparent text-white border-[3px] mt-6 w-full py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">Xem chi tiết</button>
                     </div>
                     <div class="w-full">
-                        <div class="w-full aspect-[332/480] flex items-center justify-center align-center bg-ruouvai rounded-md bg-no-repeat bg-center bg-cover">
+                        <div class="relative w-full aspect-[333/480] flex items-center justify-center align-center bg-ruouvai rounded-md bg-no-repeat bg-center bg-cover">
+                            <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                            <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                             <img src="./img/ruouvai.png" class="w-full">
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Vải </span>
@@ -252,14 +264,20 @@
             <div class="w-full aspect-[1440/72]">
                 <img src="./img/spliter.png" class="w-full scale-x-[-1]">
             </div>
-            <div class="grid grid-cols-5 gap-0 flex flex-row w-[88.89%] aspect-[1280/656] mx-auto items-center align-center justify-center px-0 py-[7%]">
-                <img src="./img/post.jfif" class="col-span-3">
-                <div class="col-span-2 pl-10">
+            <div class="flex flex-row w-[88.89%] aspect-[1280/656] mx-auto items-center align-center justify-center px-0 py-[7%]">
+                <div class="relative aspect-[733/480]">
+                    <img src="./img/spliter1.png" class="w-full aspect-[733/24] absolute scale-x-[-1] top-0 left-0"/>
+                    <img src="./img/spliter1-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                    <img src="./img/spliter1-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                    <img src="./img/spliter1.png" class="w-full aspect-[733/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
+                    <img src="./img/post.jfif" class="w-full">
+                </div>
+                <div class="pl-10">
                     <h1 class="text-left text-5xl text-white font-display mb-8 capitalize">Đồng Hành Cùng Lavale</h1>
-                    <span class="block text-left text-base text-advice font-monsterrat">
-                        Cùng Lavale tham gia các sự kiện và hoạt động vui <br/> chơi giải trí trên toàn quốc, cùng nhau lan tỏa năng <br/> lượng tích cực
+                    <span class="block text-left text-base text-white/60 font-monsterrat">
+                        Cùng Lavale tham gia các sự kiện và hoạt động vui chơi giải trí trên toàn quốc, cùng nhau lan tỏa năng lượng tích cực
                     </span>
-                    <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50">
+                    <button class="transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50 text-lg">
                         Các hoạt động của Lavale
                     </button>
                 </div>
@@ -274,45 +292,61 @@
             <div class="flex flex-col w-[88.89%] mx-auto items-center align-center justify-center px-[9%] py-[7%]">
                 <img src="./img/advice.png" class="w-[30%] mb-4">
                 <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Tư Vấn</h1>
-                <span class="block w-full text-base text-center text-advice font-monsterrat mb-12">
+                <span class="block w-full text-xl text-center text-white/60 font-medium font-monsterrat mb-12 ">
                     Cùng Lavale tìm hiểu thêm về các tác dụng của rượu và rượu thuốc truyền thống
                 </span>
                 <div class="flex flex-col w-full justify-between items-center align-center space-y-4">
                     <div class="grid grid-cols-2 gap-3 w-full flex justify-between items-center align-center">
-                        <div class="flex flex-col justify-between aspect-[523/124] bg-lavalelight/30 border-2 border-white/5 rounded-md px-4 py-5">
-                            <span class="block text-left font-medium font-monsterrat text-base text-white">
+                        <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
+                            <span class="block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8">
                                 Bài thuốc ngâm rượu chữa yếu sinh lý hiệu quả
                             </span>
-                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white">
-                                Xem chi tiết 
+                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white pl-12">
+                                Xem chi tiết
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
                         </div>
-                        <div class="flex flex-col justify-between aspect-[523/124] bg-lavalelight/30 border-2 border-white/5 rounded-md px-4 py-5">
-                            <span class="block text-left font-medium font-monsterrat text-base text-white">
+                        <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
+                            <span class="block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8">
                                 Cách ngâm rượu gừng nghệ hạ thổ
                             </span>
-                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white">
+                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white pl-12">
                                 Xem chi tiết 
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
                         </div>
                     </div>
                     <div class="grid grid-cols-2 gap-3 w-full justify-between items-center align-center">
-                        <div class=" flex flex-col justify-between aspect-[523/124] bg-lavalelight/30 border-2 border-white/5 rounded-md px-4 py-5">
-                            <span class="block text-left font-medium font-monsterrat text-base text-white">
+                        <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
+                            <span class="block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8">
                                 Công dụng rượu cau chữa viêm lợi
                             </span>
-                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white">
+                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white pl-12">
                                 Xem chi tiết 
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
                         </div>
-                        <div class=" flex flex-col justify-between aspect-[523/124] bg-lavalelight/30 border-2 border-white/5 rounded-md px-4 py-5">
-                            <span class="block text-left font-medium font-monsterrat text-base text-white">
+                        <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-0"/>
+                            <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                            <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
+                            <span class="block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8">
                                 5 Loại rượu hoa quả tốt nhất hiện nay
                             </span>
-                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white">
+                            <span class="flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white pl-12">
                                 Xem chi tiết 
                                 <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
                             </span>
