--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </a>
                 </div>
             </div>
-            <div class="flex flex-col w-[88.89%] aspect-[256/131] m-auto align-center pt-40 items-center">
+            <div class="flex flex-col w-[88.89%] aspect-[256/131] m-auto align-center pt-36 items-center">
                 <h1 class="w-full text-center text-6xl text-white font-bold font-display mb-12 capitalize">
                     Tinh Hoa <br/> Đến Từng Giọt Rượu
                 </h1>
@@ -58,16 +58,28 @@
                 </button>
             </div>
         </div>
-        <img src="./img/homepage.png" class="w-full" />
+        <img src="./img/homepage.png" class="w-full aspect-[1440/795]" />
 
         <div class="absolute w-full left-0 bottom-0 aspect-[1440/72]">
             <img src="./img/spliter.png" class="w-full scale-x-[-1] rotate-180">
         </div>
     </header>
-    <section class="relative bg-lavale w-full z-10 h-fit overflow-hidden">
 
 
-        <div class="w-full bg-lavale">
+    <section class="relative bg-lavale w-full h-fit overflow-hidden">
+        <div class="absolute top-0 left-0">
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+            <img src="./img/middleground.png" class="w-full aspect-[1440/663] opacity-30"/>
+        </div>
+
+        <div class="w-full bg-transparent">
             <div class="flex flex-col w-[88.89%] mx-auto items-center align-center justify-center">
                 <h1 class="w-full text-center text-white font-display font-bold text-6xl capitalize mb-8 mt-20">câu chuyện của Lavale</h1>
                 <span class="block w-full text-center text-advice font-monsterrat">
@@ -92,12 +104,16 @@
         </div>
 
 
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent z-9">
             <div class="flex flex-row w-[88.89%] aspect-[1280/480] mx-auto items-center align-center justify-center">    
-                <div class="w-[57%] aspect-[733/480] flex flex-col items-center align-center justify-center">
+                <div class="w-[57%] relative aspect-[733/480] flex flex-col items-center align-center justify-center" data-aos="fade-right">
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                     <img src="./img/timeline1.jfif" class="w-full h-full rounded-md"/>
                 </div>
-                <div class="w-[43%] aspect-[547/480] flex flex-col items-start align-start justify-center">
+                <div class="w-[43%] aspect-[547/480] flex flex-col items-start align-start justify-center" data-aos="fade-left">
                     <h1 class="w-full pl-14 text-left text-5xl text-white font-display mb-4 capitalize">
                         Khởi Nguồn Từ Núi Rừng
                     </h1>
@@ -107,11 +123,11 @@
                 </div>
             </div>
         </div>
-        <div class="w-full bg-lavale aspect-[1440/64]"></div>
+        <div class="w-full bg-transparent z-9 aspect-[1440/64]"></div>
         
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent z-9">
             <div class="flex flex-row w-[88.89%] aspect-[1280/480] mx-auto items-center align-center justify-center"> 
-                <div class="w-[43%] aspect-[547/480] flex flex-col items-center align-center justify-center">
+                <div class="w-[43%] aspect-[547/480] flex flex-col items-center align-center justify-center" data-aos="fade-left">
                     <h1 class="w-full pr-14 text-right text-5xl text-white font-display mb-4 capitalize">
                         Nuôi dưỡng bởi đam mê
                     </h1>
@@ -119,19 +135,27 @@
                         Nghiên cứu làm rượu trái cây từ nguyên liệu vùng núi phía Bắc mang đến cơ hội tận dụng những trái cây chất lượng cao và nguồn nước tinh khiết đặc trưng của vùng này. Lavale không chỉ là sản phẩm chất lượng cao mà còn là sự kết nối với vẻ đẹp và sự kỳ diệu của vùng đất này
                     </span>
                 </div>
-                <div class="w-[57%] aspect-[733/480] flex flex-col items-start align-start justify-center">
+                <div class="w-[57%] aspect-[733/480] relative flex flex-col items-start align-start justify-center" data-aos="fade-right">
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                     <img src="./img/timeline2.jfif" class="w-full h-full rounded-md"/>
                 </div>
             </div>
         </div>
-        <div class="w-full bg-lavale aspect-[1440/64]"></div>
+        <div class="w-full bg-transparent z-9 aspect-[1440/64]"></div>
 
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent z-9">
             <div class="flex flex-row w-[88.89%] aspect-[1280/480] mx-auto items-center align-center justify-center">    
-                <div class="w-[57%] aspect-[733/480] flex flex-col items-center align-center justify-center">
+                <div class="w-[57%] aspect-[733/480] relative flex flex-col items-center align-center justify-center" data-aos="fade-left">
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                     <img src="./img/timeline3.jfif" class="w-full h-full rounded-md"/>
                 </div>
-                <div class="w-[43%] aspect-[547/480] flex flex-col items-start align-start justify-center">
+                <div class="w-[43%] aspect-[547/480] flex flex-col items-start align-start justify-center" data-aos="fade-right">
                     <h1 class="w-full pl-14 text-left text-5xl text-white font-display mb-4 capitalize">
                         Thấm đẫm hương vị
                     </h1>
@@ -141,11 +165,11 @@
                 </div>
             </div>
         </div>
-        <div class="w-full bg-lavale aspect-[1440/64]"></div>
+        <div class="w-full bg-transparent z-9 aspect-[1440/64]"></div>
 
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent z-9">
             <div class="flex flex-row w-[88.89%] aspect-[1280/480] mx-auto items-center align-center justify-center"> 
-                <div class="w-[43%] aspect-[547/480] flex flex-col items-center align-center justify-center">
+                <div class="w-[43%] aspect-[547/480] flex flex-col items-center align-center justify-center" data-aos="fade-left">
                     <h1 class="w-full pr-14 text-right text-5xl text-white font-display mb-4 capitalize">
                         Kết lũy từ tinh hoa
                     </h1>
@@ -153,16 +177,20 @@
                         Sự kết hợp giữa khí hậu trong lành, đất đai màu mỡ và nguồn nước tinh khiết tạo nên những trái cây hoàn hảo cho việc sản xuất rượu. Việc biến những trái cây này thành rượu vang không chỉ là một nghệ thuật mà còn là sự tôn vinh vẻ đẹp của vùng núi
                     </span>
                 </div>
-                <div class="w-[57%] aspect-[733/480] flex flex-col items-start align-start justify-center">
+                <div class="w-[57%] aspect-[733/480] relative flex flex-col items-start align-start justify-center" data-aos="fade-right">
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
+                    <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
+                    <img src="./img/spliter.png" class="w-full aspect-[733/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                     <img src="./img/timeline4.jfif" class="w-full h-full rounded-md"/>
                 </div>
             </div>
         </div>
-        <div class="w-full bg-lavale aspect-[1440/64]"></div>
+        <div class="w-full bg-transparent z-9 aspect-[1440/64]"></div>
 
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent z-9">
             <div class="flex flex-row w-[88.89%] aspect-[1280/480] mx-auto items-center align-center justify-center">    
-                <div class="w-[57%] aspect-[733/480] flex flex-col items-center align-center justify-center">
+                <div class="w-[57%] aspect-[733/480] flex flex-col items-center align-center justify-center" data-aos="fade-left">
                     <svg width="733" height="480" viewBox="0 0 733 480" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g clip-path="url(#clip0_228_806)">
                         <rect opacity="0.2" y="22" width="733" height="436.282" fill="url(#pattern0_228_806)"/>
@@ -183,7 +211,7 @@
                         </defs>
                     </svg>
                 </div>
-                <div class="w-[43%] aspect-[547/480] flex flex-col items-start align-start justify-center">
+                <div class="w-[43%] aspect-[547/480] flex flex-col items-start align-start justify-center" data-aos="fade-right">
                     <h1 class="w-full pl-14 text-left text-5xl text-white font-display mb-4 capitalize">
                         Chú trọng từng chi tiết
                     </h1>
@@ -193,28 +221,28 @@
                 </div>
             </div>
         </div>
-        <div class="w-full bg-lavale aspect-[1440/64]"></div>
+        <div class="w-full bg-transparent z-9 aspect-[1440/64]"></div>
         
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent z-9">
             <div class="flex flex-row w-[88.89%] aspect-[1280/480] mx-auto items-center align-center justify-center"> 
-                <div class="w-[43%] aspect-[547/480] flex flex-col items-center align-center justify-center">
-                    <h1 class="w-full pr-14 text-right text-5xl text-white font-display mb-4 capitalize">\
+                <div class="w-[43%] aspect-[547/480] flex flex-col items-center align-center justify-center" data-aos="fade-left">
+                    <h1 class="w-full pr-14 text-right text-5xl text-white font-display mb-4 capitalize">
                         Nhẹ nhàng và thanh lịch
                     </h1>
                     <span class="pr-14 block w-full text-right text-advice font-monsterrat text-base text-white/60">
                         Mỗi chi tiết trên bao bì đều được chăm chút tỉ mỉ để tạo nên một sản phẩm không chỉ đẹp mắt mà còn truyền tải được thông điệp về sự tinh túy và chất lượng cao của rượu trái cây từ vùng núi phía Bắc.
                     </span>
                 </div>
-                <div class="w-[57%] aspect-[733/480] flex flex-col items-start align-start justify-center">
+                <div class="w-[57%] aspect-[733/480] flex flex-col items-start align-start justify-center" data-aos="fade-right">
                     <img src="./img/timeline6.png" class="w-full h-full rounded-md"/>
                 </div>
             </div>
         </div>
-        <div class="w-full bg-lavale aspect-[1440/64]"></div>
+        <div class="w-full bg-transparent z-9 aspect-[1440/64]"></div>
 
 
         <div class="w-full bg-lavale">
-            <div class="flex flex-col w-[88.89%] mx-auto items-center align-center justify-center px-[9%] py-[7%]">
+            <div class="flex flex-col w-[88.89%] mx-auto items-center align-center justify-center px-[9%] pb-[7%]">
                 <img src="./img/dragonfly.png" class="w-[15%] mb-4">
                 <h1 class="w-full text-center text-5xl text-white font-display mb-4 mt-10 capitalize">Tinh Hoa Lavale</h1>
                 <span class="block w-full text-base text-center text-advice font-monsterrat mb-12">Kết tinh của niềm tin và ước mơ</span>
@@ -225,7 +253,7 @@
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
-                            <img src="./img/ruouman.png" class="w-full">
+                            <img src="./img/ruouman.png" class="w-full" data-aos="fade-down">
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Mận </span>
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
@@ -237,7 +265,7 @@
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
-                            <img src="./img/ruoutaomeo.png" class="w-full">
+                            <img src="./img/ruoutaomeo.png" class="w-full" data-aos="fade-down">
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Táo Mèo </span>
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ</span>
@@ -249,7 +277,7 @@
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
                             <img src="./img/spliter-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
                             <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
-                            <img src="./img/ruouvai.png" class="w-full">
+                            <img src="./img/ruouvai.png" class="w-full" data-aos="fade-down">
                         </div>
                         <span class="block w-full text-lg text-center text-white leading-10 font-monsterrat mt-6 font-medium capitalize"> Lavale Vải </span>
                         <span class="block w-full text-center text-advice font-monsterrat"> 345,000 đ </span>
@@ -265,14 +293,14 @@
                 <img src="./img/spliter.png" class="w-full scale-x-[-1]">
             </div>
             <div class="flex flex-row w-[88.89%] aspect-[1280/656] mx-auto items-center align-center justify-center px-0 py-[7%]">
-                <div class="relative aspect-[733/480]">
+                <div class="relative aspect-[733/480]" data-aos="fade-left">
                     <img src="./img/spliter1.png" class="w-full aspect-[733/24] absolute scale-x-[-1] top-0 left-0"/>
                     <img src="./img/spliter1-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] top-0 left-0"/>
                     <img src="./img/spliter1-vertical.png" class="h-full aspect-[24/480] absolute scale-y-[-1] rotate-180 top-0 right-0" />
                     <img src="./img/spliter1.png" class="w-full aspect-[733/24] absolute scale-x-[-1] rotate-180 bottom-0 left-0"/>
                     <img src="./img/post.jfif" class="w-full">
                 </div>
-                <div class="pl-10">
+                <div class="pl-10" data-aos="fade-right">
                     <h1 class="text-left text-5xl text-white font-display mb-8 capitalize">Đồng Hành Cùng Lavale</h1>
                     <span class="block text-left text-base text-white/60 font-monsterrat">
                         Cùng Lavale tham gia các sự kiện và hoạt động vui chơi giải trí trên toàn quốc, cùng nhau lan tỏa năng lượng tích cực
@@ -288,7 +316,7 @@
         </div>
 
 
-        <div class="w-full bg-lavale">
+        <div class="w-full bg-transparent">
             <div class="flex flex-col w-[88.89%] mx-auto items-center align-center justify-center px-[9%] py-[7%]">
                 <img src="./img/advice.png" class="w-[30%] mb-4">
                 <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Tư Vấn</h1>
